--- a/style.css
+++ b/style.css
@@ -151,7 +151,8 @@ html
  height: 100vh;
  background: #1c0522;
 }
-.banner2 
+.banner2,
+.banner1
 {
   z-index: 10;
 }
@@ -277,9 +278,9 @@ html
 #down
 {
   position: absolute;
-  top: -130rem;
+  top: -120rem;
   width: 30rem;
-  height: 50rem;
+  height: 62rem;
   z-index: 9;
 }
 .banner3-list-background ul 
