--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ html
   top: 0;
   left: 0;
   width: 100%;
-  padding: 30px 100px;
+  padding: 5rem 3rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -35,7 +35,7 @@ html
  font-weight: 700;
  text-decoration: none;
  text-transform: uppercase;
- letter-spacing: 2px;
+ letter-spacing: 0.2rem;
 }
 .navegation
 {
@@ -46,12 +46,12 @@ html
 .nav-li
 {
  list-style: none;
- margin-left: 5px;
+ margin-left: 0.5rem;
 }
 .nav-a
 {
  text-decoration: none;
- padding: 6px 6px;
+ padding: 0.6rem 0.6rem;
  color: #fff;
  font-size: 2rem;
  border-radius: 20px;
@@ -66,7 +66,7 @@ html
  position: relative;
  width: 100%;
  height: 100vh;
- padding: 100px;
+ padding: 10rem;
  display: flex;
  justify-content: center;
  align-items: center;
@@ -103,10 +103,10 @@ html
 #text 
 {
  position: absolute;
- right: -60rem;
- color: #fff;
+ right: 3rem;
+ color: #eeaafd99;
  white-space: nowrap;
- font-size: 12rem;
+ font-size: 5rem;
  z-index: 9;
 }
 #btn
@@ -184,7 +184,7 @@ html
 }
 .banner2-context
 {
-  background:#cf9ff5;
+  background:#7545a9;
 }
 .banner2-context p 
 {
@@ -219,7 +219,7 @@ html
   left: 6rem;
   width: 60vw;
   height: 55rem;
-  background:#6326c6;
+  background:#aa66cd;
   border-radius: 40px;
 }
 .banner2-list-background ul 
@@ -272,7 +272,7 @@ html
   right: 6rem;
   width: 65%;
   height: 40%;
-  background: #6326c6;
+  background: #aa66cd;
   border-radius: 40px;
 }
 #down
@@ -401,7 +401,9 @@ footer .menu_footer li a:hover
   }
   #text 
   {
-    right: -74rem;
+    right: -22rem;
+    top: 40rem;
+    color: #eeaafd;
   }
   .banner1,
   .banner2,
@@ -456,5 +458,8 @@ footer .menu_footer li a:hover
   #down
   {
     top: -141rem;
+  }
+  .nav-a {
+    padding: 2rem 2rem;
   }
 }
